--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;500;600;700&display=swap');
+
+:root {
+  --purpleColor: #5964e0;
+  --textColor: #6e8098;
+  --smoothTransition: all 0.25s ease-in-out;
+  --secondaryBackground: #19202d;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #121721;
+  color: var(--textColor);
+  font-family: 'Kumbh Sans', sans-serif;
+  font-size: 18px;
+}
+
+.home {
+  padding: 1rem;
+}
+
+.jobs_container {
+  margin-top: 6rem;
+}
+
+.more_btn {
+  background-color: var(--purpleColor);
+  display: block;
+  margin: auto;
+  color: white;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  font-weight: 500;
+  border: none;
+  transition: var(--smoothTransition);
 }
