--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,13 @@ body {
   font-size: 18px;
 }
 
-.home {
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+.home,
+.details_page {
   padding: 1rem;
 }
 
