--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -3,3 +3,9 @@ footer {
   padding: 1.5rem 1rem;
   margin-top: 1rem;
 }
+
+@media (min-width: 640px) {
+  footer {
+    padding: 1.5rem 2rem;
+  }
+}
