--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -34,3 +34,20 @@ header {
   border-radius: 100%;
   transition: var(--smoothTransition);
 }
+
+@media (min-width: 640px) {
+  header {
+    border-radius: 0 0 0 5rem;
+    padding: 2rem;
+    padding-bottom: 5rem;
+    background-image: url('../../assets/tablet/bg-pattern-header.svg');
+  }
+}
+
+@media (min-width: 950px) {
+  header {
+    padding: 2rem 6rem;
+    padding-bottom: 5rem;
+    background-image: url('../../assets/desktop/bg-pattern-header.svg');
+  }
+}
