--- a/src/components/full_details/FullDetailCard.css
+++ b/src/components/full_details/FullDetailCard.css
@@ -46,3 +46,23 @@ li {
 .role h1 {
   margin-bottom: 1.5rem;
 }
+
+@media (min-width: 950px) {
+  .full_detail_card {
+    margin-top: 6rem;
+  }
+
+  .card_head {
+    display: flex;
+    align-items: center;
+  }
+
+  .card_head div {
+    width: 80%;
+  }
+
+  .card_head .apply_btn {
+    width: 20%;
+    padding: 0.75rem;
+  }
+}
